resolvendo erros do login

--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,7 @@
         <p id="cadastre">Aluno novo? <strong>Cadastre-se</strong></p>
     </main>
     <section id="img-background">
-        <img src="/boletim-escolar/Images/undraw_exams_g4ow.svg" >
+        <img src="/boletim-escolar/Images/undraw_exams_g4ow.svg">
 
     </section>
 
@@ -45,9 +45,12 @@
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-auth.js"></script>
-    
+
     <script defer src="/boletim-escolar/js/firebaseConfig.js"></script>
-    <script src="/boletim-escolar/js/login.js"></script>
+
+    <script defer src="/boletim-escolar/js/login.js"></script>
+
+    
 </body>
 
 </html>
