parte das notas no banco de dados

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
     <span class="registerArea">
 
         <h1>Cadastre-se</h1>
-        <form action="" method="get">
+        <form action="" method="GET">
             <input type="email" name="" id="regUserInput" placeholder="E-mail">
             <input type="password" name="" id="regPassInput" placeholder="Senha">
         </form>
