--- a/pages/studentArea.html
+++ b/pages/studentArea.html
@@ -27,10 +27,12 @@
 
     <main>
         <h2>Area do aluno</h2>
+        <input type="checkbox" name="theme" id="switch">
+        <label for="switch"></label>
         <div id="initialData">
             <div id="turma">
                 <h3>Turma</h3>
-                <h4>3ºA</h4>
+                <h4></h4>
             </div>
             <div id="name">
                 <h3></h3>
@@ -50,68 +52,75 @@
                         <th>3º</th>
                         <th>4º</th>
                     </tr>
-                    <tr>
+                    <tr id="matematica">
                         <th>Matematica</th>
-                        <td>4.0</td>
-                        <td>7.0</td>
-                        <td>7.0</td>
-                        <td>4.0</td>
+                        <td id="mat-b1"></td>
+                        <td id="mat-b2"></td>
+                        <td id="mat-b3"></td>
+                        <td id="mat-b4"></td>
                     </tr>
-                    <tr>
+                    <tr id="quimica">
                         <th>Quimica</th>
-                        <td>4.0</td>
-                        <td>7.0</td>
-                        <td>7.0</td>
-                        <td>4.0</td>
+                        <td id="qui-b1"></td>
+                        <td id="qui-b2"></td>
+                        <td id="qui-b3"></td>
+                        <td id="qui-b4"></td>
                     </tr>
-                    <tr>
+                    <tr id="fisica">
                         <th>Física</th>
-                        <td>4.0</td>
-                        <td>7.0</td>
-                        <td>7.0</td>
-                        <td>4.0</td>
+                        <td id="fis-b1"></td>
+                        <td id="fis-b2"></td>
+                        <td id="fis-b3"></td>
+                        <td id="fis-b4"></td>
                     </tr>
-                    <tr>
+                    <tr id="inglês">
                         <th>Inglês</th>
-                        <td>4.0</td>
-                        <td>7.0</td>
-                        <td>7.0</td>
-                        <td>4.0</td>
+                        <td id="ing-b1"></td>
+                        <td id="ing-b2"></td>
+                        <td id="ing-b3"></td>
+                        <td id="ing-b4"></td>
                     </tr>
-                    <tr>
+                    <tr id="biologia">
                         <th>Biologia</th>
-                        <td>4.0</td>
-                        <td>7.0</td>
-                        <td>7.0</td>
-                        <td>4.0</td>
+                        <td id="bio-b1"></td>
+                        <td id="bio-b2"></td>
+                        <td id="bio-b3"></td>
+                        <td id="bio-b4"></td>
                     </tr>
-                    <tr>
+                    <tr id="artes">
                         <th>Artes</th>
-                        <td>4.0</td>
-                        <td>7.0</td>
-                        <td>7.0</td>
-                        <td>4.0</td>
+                        <td id="art-b1"></td>
+                        <td id="art-b2"></td>
+                        <td id="art-b3"></td>
+                        <td id="art-b4"></td>
                     </tr>
-                    <tr>
+                    <tr id="ed-fisica">
                         <th>Ed.Física</th>
-                        <td>4.0</td>
-                        <td>7.0</td>
-                        <td>7.0</td>
-                        <td>4.0</td>
+                        <td id="efi-b1"></td>
+                        <td id="efi-b2"></td>
+                        <td id="efi-b3"></td>
+                        <td id="efi-b4"></td>
                     </tr>
-                    <tr>
+                    <tr id="geografia">
                         <th>Geografia</th>
-                        <td>4.0</td>
-                        <td>7.0</td>
-                        <td>7.0</td>
-                        <td>4.0</td>
+                        <td id="geo-b1"></td>
+                        <td id="geo-b2"></td>
+                        <td id="geo-b3"></td>
+                        <td id="geo-b4"></td>
                     </tr>
-                    <tr>
+                    <tr id="portugues">
+                        <th>Português</th>
+                        <td id="lpo-b1"></td>
+                        <td id="lpo-b2"></td>
+                        <td id="lpo-b3"></td>
+                        <td id="lpo-b4" ></td>
+                    </tr>
+                    <tr id="historia">
                         <th>História</th>
-                        <td>4.0</td>
-                        <td>7.0</td>
-                        <td>7.0</td>
-                        <td>4.0</td>
+                        <td id="his-b1"></td>
+                        <td id="his-b2"></td>
+                        <td id="his-b3"></td>
+                        <td id="his-b4"></td>
                     </tr>
                 </table>
             </div>
@@ -124,36 +133,36 @@
 
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>Sem motivo</td>
+                        <th>28/06/2021</th>
+                        <td>aa</td>
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>Foi ao medico</td>
+                        <th></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>sem motivo</td>
+                        <th></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>Viajou</td>
+                        <th></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>Foi ao dentista</td>
+                        <th></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>Sem motivo</td>
+                        <th></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>Sem motivo</td>
+                        <th></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>Estava passando mal</td>
+                        <th></th>
+                        <td></td>
                     </tr>
                 </table>
             </div>
@@ -166,12 +175,36 @@
 
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>Falou alto na sala</td>
+                        <th></th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <th>20/07/20</th>
-                        <td>Advertencia de 3 dias pois cabulou aula de Matematica</td>
+                        <th></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td></td>
                     </tr>
                    
                 </table>
@@ -200,7 +233,7 @@
 
     <script defer src="/boletim-escolar/js/firebaseConfig.js"></script>
 
-
+    <script  defer src="/boletim-escolar/js/media.js"></script>
     <script defer src="/boletim-escolar/js/studentArea.js"></script>
 
    
