criando dark-mode

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/boletim-escolar/Images/icon-page.png" type="image/x-icon">
     <title>Boletim Escolar</title>
 </head>
 
@@ -26,7 +27,10 @@
     </main>
     <section id="img-background">
         <img src="/boletim-escolar/Images/undraw_exams_g4ow.svg">
+    </section>
 
+    <section id="img-bg-register">
+        <img src="/boletim-escolar/Images/undraw_book_lover_mkck.svg">
     </section>
 
     <div id="loginMsgError">
@@ -54,7 +58,7 @@
         </form>
 
         <button id="cadastrar">Cadastrar</button>
-        <p>Já é aluno? clique em "VOLTAR" e faça o login</p>
+        <p>Já é aluno? clique em <strong>"VOLTAR"</strong> e faça o login</p>
         <button id="voltar">Voltar</button>
     </span>
 
