--- a/pages/studentArea.html
+++ b/pages/studentArea.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/boletim-escolar/Images/icon-page.png" type="image/x-icon">
     <link rel="stylesheet" href="/boletim-escolar/styles/studentArea.css">
 </head>
 
