--- a/pages/studentArea.html
+++ b/pages/studentArea.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/boletim-escolar/Images/icon-page.png" type="image/x-icon">
-    <link rel="stylesheet" href="/boletim-escolar/styles/studentArea.css">
+    <link rel="stylesheet" href="/boletim-escolar/styles/dashboardPages.css">
 </head>
 
 <body>
@@ -27,17 +27,17 @@
     </header>
 
     <main>
-        <h2>Area do aluno</h2>
-
+        <h2 id="titleStudent">Area do aluno</h2>
         <input type="checkbox" name="theme" id="switch">
-        <label for="switch"></label>
+        <label id="labelDarkMode" for="switch"></label>
 
         <div id="initialData">
             <div id="turma">
-                <h3>Turma</h3>
-                <h4></h4>
+                <h4>Turma: </h4>
+                <h3></h3>
             </div>
             <div id="name">
+                <small>Nome do aluno:</small>
                 <h3></h3>
             </div>
             <div id="studentPhoto">
@@ -225,9 +225,9 @@
                 </div>
             </div>
         </div>
-        <div id="finalResult">
-            <h3>Resultado final: APROVADO!!</h3>
-        </div>
+
+        <h3 id="finalResult">Resultado final: APROVADO!!</h3>
+
     </main>
 
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
@@ -238,7 +238,7 @@
     <script defer src="/boletim-escolar/js/globalJS/pageFeatures.js"></script>
     <script defer src="/boletim-escolar/js/studentAreaJS/studentData.js"></script>
     <script defer src="/boletim-escolar/js//studentAreaJS/studentArea.js"></script>
-   
+
 
 
 
