--- a/pages/teacherArea.html
+++ b/pages/teacherArea.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/boletim-escolar/Images/icon-page.png" type="image/x-icon">
-    <link rel="stylesheet" href="/boletim-escolar/styles/teacherArea.css">
+    <link rel="stylesheet" href="/boletim-escolar/styles/dashboardPages.css">
     <title>Area do Professor</title>
 </head>
 
@@ -18,57 +18,69 @@
         <h1>Escola de São Paulo</h1>
 
         <div id="area-user">
-            <h3 id="user-name"></h3>
+            <h3 id="teacher-name"></h3>
             <img src="/boletim-escolar/Images/exitIcon.png" id="exit">
         </div>
         <span class="message-exit">
             <h5>Sair?</h5><img src="/boletim-escolar/Images/closeIcon.png">
         </span>
     </header>
-
-    <section>
-        <h2>Area do Professor</h2>
-
-        <input type="checkbox" name="theme" id="switch">
-        <label for="switch"></label>
-    </section>
-
     <main>
-        <form>
-            <input type="search" name="" id="" placeholder="Nome do aluno">
-            <input type="search" name="" id="" placeholder="Turma">
-        </form>
-        <button>Buscar</button>
-        <button> qunado buscar ai carrega esse botao com a opcao de Alterar Dados e aparecera uma div para
-            alterar</button>
+        <input type="checkbox" name="theme" id="switch">
+        <label id="labelDarkMode" for="switch"></label>
 
-        <div>
-            <h2>NOTAS</h2>
-            <h3>Matéria</h3><input type="search" name="" id=""><input type="number" name="" id=""><button>Adicionar
-                nota</button>
+        <div id="searchStudent">
+            <h2>Area do Professor</h2>
+            <div id="editAndSearch">
+                <form>
+                    <input type="search" name="" id="" placeholder="Nome do aluno">
+                    <label for="searchClass">Turma</label>
+                    <select id="searchClass">
+                        <option value="none">--</option>
+                        <option value="turma3A">3ºA</option>
+                        <option value="turma2C">2ºC</option>
+                        <option value="turma3B">1ºB</option>
+                    </select>
+                </form>
 
-            <div>
-                <h2>Faltas</h2>
-                <input type="date" name="" id=""><input type="text">
-                <div>Adicionar Falta</div>
+                <button>Buscar</button>
+
+                <button id="editDatas">Editar aluno</button>
+
+                <!-- qunado buscar ai carrega esse botao com a opcao de Alterar Dados e aparecera uma div
+                para
+                alterar -->
             </div>
+            <div id="searchStudentDatas">
+                <div>
+                    <h4>Notas</h4>
+                    <input type="search" name="" id="" placeholder="Matéria"><input type="number" name="" id=""
+                        placeholder="nota"><button>Editar nota</button>
+                </div>
+                <div>
+                    <h4>Faltas</h4>
+                    <input type="date" name="" id="date"><input type="text" placeholder="Motivo">
+                    <button>Adicionar Falta</button>
+                </div>
 
-            <div>
-                <h2>Ocorrências</h2>
-                <input type="date" name="" id=""><input type="text">
-                <div>Adicionar Ocorrências</div>
+                <div>
+                    <h4>Ocorrências</h4>
+                    <input type="date" name="" id=""><input type="text" placeholder="motivo">
+                    <button>Adicionar Ocorrências</button>
+                </div>
             </div>
         </div>
 
 
-
         <div id="initialData">
             <div id="turma">
-                <h3>Turma</h3>
-                <h4></h4>
+                <h4>Turma: </h4>
+                <h3></h3>
             </div>
             <div id="name">
+                <small>Nome do aluno:</small>
                 <h3></h3>
+                <small id="user-name"></small>
             </div>
             <div id="studentPhoto">
                 <img src="" alt="" srcset="">
@@ -76,7 +88,7 @@
         </div>
         <div id="studentPerformance">
             <div id="media">
-                <h4>Notas</h4>
+                <h2>Notas</h2>
                 <table class="table">
                     <tr>
                         <th></th>
@@ -158,7 +170,7 @@
                 </table>
             </div>
             <div id="absences">
-                <h4>Faltas</h4>
+                <h2>Faltas</h2>
                 <table class="table">
                     <tr>
                         <th>Dia</th>
@@ -200,7 +212,7 @@
                 </table>
             </div>
             <div id="occurrences">
-                <h4>Ocorrências</h4>
+                <h2>Ocorrências</h2>
                 <table class="table">
                     <tr>
                         <th>Dia</th>
@@ -243,7 +255,7 @@
                 </table>
             </div>
             <div id="finalStatistics">
-                <h4>Média de desempenho</h4>
+                <h2>Média de desempenho</h2>
                 <div id="gradeAverage">
                     <img src="" alt="">
                 </div>
@@ -255,9 +267,8 @@
                 </div>
             </div>
         </div>
-        <div id="finalResult">
-            <h3>Resultado final: APROVADO!!</h3>
-        </div>
+
+        <h3 id="finalResult">Resultado final: APROVADO!!</h3>
     </main>
 
 
@@ -267,9 +278,10 @@
 
     <script defer src="/boletim-escolar/js/globalJS/firebaseConfig.js"></script>
     <script defer src="/boletim-escolar/js/globalJS/pageFeatures.js"></script>
+    <script defer src="/boletim-escolar/js/studentAreaJS/studentData.js"></script>
     <script defer src="/boletim-escolar/js/teacherAreaJS/teacherArea.js"></script>
-   
-    
+
+
 
 </body>
 
