conseguindo puxar dados de qualquer aluno e exibindo  na tela

--- a/pages/studentArea.html
+++ b/pages/studentArea.html
@@ -56,14 +56,14 @@
                         <th>4º</th>
                     </tr>
                     <tr id="matematica">
-                        <th>Matematica</th>
+                        <th>Matemática</th>
                         <td id="mat-b1"></td>
                         <td id="mat-b2"></td>
                         <td id="mat-b3"></td>
                         <td id="mat-b4"></td>
                     </tr>
                     <tr id="quimica">
-                        <th>Quimica</th>
+                        <th>Química</th>
                         <td id="qui-b1"></td>
                         <td id="qui-b2"></td>
                         <td id="qui-b3"></td>
