--- a/pages/teacherArea.html
+++ b/pages/teacherArea.html
@@ -15,7 +15,11 @@
 
 <body>
     <header>
-        <h1>Escola de São Paulo</h1>
+        <div id="tittleHeader">
+            <input type="checkbox" name="theme" id="switch">
+            <label id="labelDarkMode" for="switch"></label>
+            <h1>Escola de São Paulo</h1>
+        </div>
 
         <div id="area-user">
             <h3 id="teacher-name"></h3>
