--- a/pages/teacherArea.html
+++ b/pages/teacherArea.html
@@ -36,14 +36,22 @@
         <div id="searchStudent">
             <h2>Area do Professor</h2>
             <div id="editAndSearch">
-                <form>
-                    <input type="search" name="" id="searchStudentName" placeholder="Nome do aluno">
+                <form autocomplete="off">
+                    <input type="search" name="" id="searchStudentName" placeholder="Nome do aluno" >
 
                     <select id="searchClass">
                         <option disabled>Selecione a turma</option>
-                        <option value="3ºA">3ºA</option>
-                        <option value="2ºC">2ºC</option>
+                        <option value="1ºA">1ºA</option>
                         <option value="1ºB">1ºB</option>
+                        <option value="1ºC">1ºC</option>
+
+                        <option value="2ºA">2ºA</option>
+                        <option value="2ºB">2ºB</option>
+                        <option value="2ºC">2ºC</option>
+                        
+                        <option value="3ºA">3ºA</option>
+                        <option value="3ºB">3ºB</option>
+                        <option value="3ºC">3ºC</option>
                     </select>
                 </form>
 
