--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main id="areaLogin">
         <h1>Boletim Escolar</h1>
         <h3>Login</h3>
-        <form method="POST" autocomplete="on">
+        <form method="POST" autocomplete="off">
             <input type="email" id="InputUser" placeholder="E-mail" maxlength="100">
             <input type="password" id="InputPassword" placeholder="Senha" minlength="6">
         </form>
