adicionando alunos de exemplos

--- a/pages/teacherArea.html
+++ b/pages/teacherArea.html
@@ -115,7 +115,7 @@
     
                 <div id="cardStudent">
                     <div id="photo">
-                        <img src="" alt="" srcset="">
+                        <img src="../Images/studentImg.png">
                     </div>
                     <div id="basicInfo">
                         <h5>Turma</h5>
