--- a/pages/studentArea.html
+++ b/pages/studentArea.html
@@ -37,7 +37,7 @@
 
             <div id="cardStudent">
                 <div id="photo">
-                    <img src="" alt="" srcset="">
+                    <img src="../Images/studentImg.png">
                 </div>
                 <div id="basicInfo">
                     <h5>Turma</h5>
